# rdump

./: .gitignore  .rdump.toml  GEMINI.md  README.md  changes.txt  dump.txt  missing-test-cases.txt  prompt_for_help.txt  response.txt
docs/: code-aware-spec.md  spec.md
insane_test_bed/: App.tsx  ArrayListTest.java  MyClass.java  UtilsTest.java  broken_link  calls.rs  code.js  code.py  code.rs  (+13 more)
rdump/: Cargo.toml  README.md  dump.ts  dump.txt  evaluator.rs  package-lock.json  tsconfig.json
rdump/commands/: search.rs
rdump/predicates/: helpers.rs
rdump/predicates/code_aware/: mod.rs
rdump/src/: config.rs  evaluator.rs  formatter.rs  lib.rs  main.rs  parser.rs  rql.pest
rdump/src/commands/: lang.rs  mod.rs  preset.rs  search.rs
rdump/src/predicates/: code_aware.rs  contains.rs  ext.rs  helpers.rs  in_path.rs  matches.rs  mod.rs  modified.rs  name.rs  path.rs  size.rs
rdump/src/predicates/code_aware/: mod.rs
rdump/src/predicates/code_aware/profiles/: go.rs  java.rs  javascript.rs  mod.rs  python.rs  react.rs  rust.rs  typescript.rs
rdump/tests/: advanced_logic.rs  cli.rs  code_aware_search.rs  common.rs  complex_queries.rs  contains_predicate.rs  extended_cli.rs  filesystem_edge_cases.rs  formatter.rs  go_search.rs  hunks_format_test.rs  ignore.rs  java_search.rs  js_ts_search.rs  macos_debug.rs  matches_predicate.rs  modified_predicate.rs  name_predicate_logic.rs  path_predicate.rs  python_search.rs  react_comprehensive_search.rs  react_search.rs  rust_search.rs  rust_search_macros.rs  rust_search_traits.rs  search_integration.rs  semantic_wildcard.rs
(+4 files in other folders)
